Fix sermon event cards layout bug

--- a/src/components/Cards/Cards.module.scss
+++ b/src/components/Cards/Cards.module.scss
@@ -130,7 +130,6 @@
 }
 
 .EventCard {
-  padding: 0 60px;
   width: 100%;
   height: 100%;
   display: flex;
@@ -166,15 +165,22 @@
     }
   }
 
-  &__time,
-  &__location {
+  &__info {
     display: flex;
-    align-items: start;
-    width: 70%;
-    gap: 8px;
+    flex-direction: column;
+    margin-top: auto;
+    gap: 16px;
 
-    p {
-      color: black;
+    &__time,
+    &__location {
+      display: flex;
+      align-items: center;
+      width: 70%;
+      gap: 8px;
+      
+      p {
+        color: black;
+      }
     }
   }
 
